[gd_scene load_steps=16 format=2]

[ext_resource path="res://Art Packs/CosmicEffects/Time1/Cosmic_02.png" type="Texture" id=1]
[ext_resource path="res://Art Packs/CosmicEffects/Circular/Cosmic_11.png" type="Texture" id=2]
[ext_resource path="res://Art Packs/CosmicEffects/Time1/Cosmic_01.png" type="Texture" id=3]
[ext_resource path="res://Art Packs/CosmicEffects/Time2/Cosmic_07.png" type="Texture" id=4]
[ext_resource path="res://Art Packs/Space Shooter GUI/PNG/Ship_Shop/Table_01.png" type="Texture" id=5]
[ext_resource path="res://Levels/LevelSelect/StatsZone.gd" type="Script" id=6]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.866394, 0.222656, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
max_value = 2.0
_data = [ Vector2( 0.00301205, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
orbit_velocity = 1.91259
orbit_velocity_random = 0.0
tangential_accel = 600.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Animation" id=6]
resource_name = "default"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -720.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite3:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -1080.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/InnerGrowingSphere:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.5, 5, 7.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1, 1 ), Vector2( 0.2, 0.2 ), Vector2( 1, 1 ), Vector2( 0.2, 0.2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/InnerGrowingSphere:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1800.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Particles2D:process_material:orbit_velocity")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 2.0, 1.0 ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 59.2859

[sub_resource type="CircleShape2D" id=8]
radius = 110.491

[sub_resource type="Animation" id=9]
resource_name = "DisplayLevelInfo"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("LevelPanel:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 187, 0 ), Vector2( 187, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelPanel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -95, -61 ), Vector2( -94.6821, -114 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelPanel/LevelDescription:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StatsZone" type="Node2D"]
script = ExtResource( 6 )

[node name="Particles2D" type="Particles2D" parent="."]
rotation = -0.426009
amount = 35
process_material = SubResource( 5 )

[node name="Node2D" type="Node2D" parent="."]
rotation = 2.86698

[node name="Sprite2" type="Sprite" parent="Node2D"]
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Node2D"]
rotation = -5.73397
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Node2D"]
modulate = Color( 1, 1, 1, 0.91259 )
position = Vector2( -34.3413, 0.255739 )
rotation = -8.60095
texture = ExtResource( 3 )

[node name="InnerGrowingSphere" type="Sprite" parent="Node2D"]
position = Vector2( 21.2775, -12.2167 )
rotation = 14.3349
scale = Vector2( 0.339857, 0.339857 )
texture = ExtResource( 2 )

[node name="RotationAnimPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="DisplayArea2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DisplayArea2D"]
shape = SubResource( 8 )

[node name="LevelPanel" type="TextureRect" parent="."]
margin_left = -95.0
margin_top = -61.0
margin_right = 92.0
margin_bottom = -61.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelDescription" type="Label" parent="LevelPanel"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 0.971
anchor_bottom = 0.955
margin_left = 8.0
margin_top = 2.0
margin_right = 0.0469818
margin_bottom = 0.0149956
text = "The Temporal Rift
Stats"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DisplayLevelInfo = SubResource( 9 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="DisplayArea2D" to="." method="_on_DisplayArea2D_area_entered"]
[connection signal="area_exited" from="DisplayArea2D" to="." method="_on_DisplayArea2D_area_exited"]
